syntax = "proto3";
package main;
option go_package = "./messages/controller_storage";

//import "controller.proto";
//import "storage.proto";



message ControllerMessage {
  enum StatusCode {
    OK = 0;
    ERROR = 1;
    UNKNOWN_NODE = 2;
  }

  message AcceptNewNode{
    StatusCode status_code = 1;
    int32 expected_heartbeat_interval = 2;
  }

  message MissedHeartbeats {
    StatusCode status_code = 1;
    string node_id = 2;
    bool can_reinit = 3;
  }

  message StorageNodeInfo {
    string storage_node_id = 1;
    string host = 2;
    string port = 3;
  }

  message FileCorruptionResponse {
    StatusCode status_code = 1;
    repeated StorageNodeInfo storage_nodes = 2;
    string file_name = 3;
  }

  message ReplicationInfo {
    string file_name = 1;
    repeated StorageNodeInfo storage_nodes = 2;
  }

  message ReplicationRequest {
    StatusCode status_code = 1;
    repeated ReplicationInfo replication_info = 2;
  }


  oneof controller_message {
    AcceptNewNode accept_new_node = 1;
    MissedHeartbeats missed_heartbeats = 2;
    FileCorruptionResponse file_corruption_response = 3;
    ReplicationRequest replication_request = 4;
  }
}

message StorageNodeMessage {
  enum NodeStatus {
    NEW = 0;
    ACTIVE = 1;
  }

  message Intro {
    string node_id = 1;
    NodeStatus node_status = 2;
    string openPort = 3;
    string host = 4;
  }

  message Heartbeat {
    string node_id = 1;
    NodeStatus node_status = 2;
    int64 free_space = 3;
    int32 num_requests_processed = 4;
    repeated string new_files = 5;
    repeated string all_files = 6;
  }

  message FileCorruption {
    string node_id = 1;
    string file_name = 2;
  }

  oneof storage_node_message {
    Intro intro = 1;
    Heartbeat heartbeat = 2;
    FileCorruption file_corruption = 3;
  }
}

